compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@syntax__trivial__too_long_integer.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/syntax/trivial/too_long_integer.test
input_file: compiler/eight-tests/tests/ui/syntax/trivial/too_long_integer.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::invalid_integer_literal

  × found illegal i32 literal
   ╭─[tests/ui/syntax/trivial/too_long_integer.test:2:11]
 1 │ fn zaza() {
 2 │   let z = 12646234623646723467234234;
   ·           ─────────────┬────────────
   ·                        ╰── the maximum value that can be represented by an i32 is 2147483647
 3 │ }
   ╰────
  help: did you mean to specify a larger integer type?
