compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@syntax__trivial__unexpected_character.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/syntax/trivial/unexpected_character.test
input_file: compiler/eight-tests/tests/ui/syntax/trivial/unexpected_character.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::unexpected_character

  × found illegal character during parsing
   ╭─[tests/ui/syntax/trivial/unexpected_character.test:1:13]
 1 │ struct Vec2 @ {
   ·             ┬
   ·             ╰── the character '@' does not parse into any tokens
 2 │   x: i32,
   ╰────
