compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@syntax__trivial__unexpected_end_of_file.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/syntax/trivial/unexpected_end_of_file.test
input_file: compiler/eight-tests/tests/ui/syntax/trivial/unexpected_end_of_file.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::unexpected_end_of_file

  × expected more characters after this
   ╭─[tests/ui/syntax/trivial/unexpected_end_of_file.test:1:14]
 1 │ fn foo() -> *
   ╰────
  help: add more input to form a valid program
